<resources>
    <string name="app_name">CarAssistant</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="expense_categories">
        <item>"Топливо"</item>
        <item>"Запчасти"</item>
        <item>"Шины"</item>
        <item>"Диски"</item>
        <item>"Работа сервиса"</item>
        <item>"Автомойка"</item>
        <item>"Другое"</item>
    </string-array>

    <string name="mark">Марка</string>
    <string name="model">Модель</string>
    <string name="color">Цвет</string>
    <string name="category">Категория</string>
    <string name="price">Цена</string>
    <string name="add_mark">Введите марку</string>
    <string name="add_model">Введите модель</string>
    <string name="add_year">Введите год</string>
    <string name="add_mileage">Введите пробег</string>
    <string name="add_color">Введите цвет</string>
    <string name="add_price">Введите стоимость</string>
    <string name="add_car">Добавить авто</string>
    <string name="add_cost">Добавьте сумму расхода</string>
    <string name="add_category">Выберите категорию</string>
    <string name="add_date">Добавьте дату</string>
    <string name="add_comment">Добавьте комментарий</string>
    <string name="add_mileage_expense">Добавьте пробег</string>
    <string name="add_expense">Добавить</string>
    <string name="list_cars">Список автомобилей</string>
    <string name="operation_details">Детали операции</string>
    <string name="cost">Сумма</string>
    <string name="date">Дата</string>
    <string name="mileage">Пробег</string>
    <string name="comment">Комментарий</string>
    <string name="redaction">Редактировать</string>
    <string name="operations">Операции</string>
    <string name="statistics">Статистика</string>
    <string name="icon_category">Иконка категории</string>
    <string name="icon_calendar">Иконка календаря</string>
    <string name="icon_car">Иконка автомобиля</string>
    <string name="icon_expenses">Иконка операций</string>
    <string name="icon_add">Иконка добавления</string>
    <string name="icon_back">Иконка назад</string>
    <string name="icon_delete">Иконка удаления</string>
    <string name="edit">Редактировать</string>
    <string name="login">Логин</string>
    <string name="input_login">Введите логин</string>
    <string name="password">Пароль</string>
    <string name="input_password">Введите пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="log_in">Вход</string>
    <string name="input_again_password">Повторите пароль</string>
    <string name="go_back">Вернуться назад</string>
    <string name="registration">Регистрация</string>
    <string name="change_password">Сменить пароль</string>
    <string name="code_for_guest_entrance">Код для входа гостю</string>
    <string name="log_out">Выйти из аккаунта</string>
    <string name="car_data">Даннные автомобиля</string>
    <string name="year">Год</string>
    <string name="cost_car">Стоимость</string>
    <string name="gen_code">Сгенерировать код</string>
    <string name="need_to_add_car">Необходимо добавить автомобиль</string>
    <string name="code_description">Вы можете сгенерировать код для гостевого входа в расходы данного автомобиля</string>
    <string name="code_for_guest_log_in">Код для гостевого доступа:</string>
    <string name="text_log_in_with_code">Или вы можете войти в гостевой аккаунт по коду</string>
    <string name="input_code">Введите код</string>
    <string name="log_in_with_code">Войти по коду</string>
    <string name="status">Статус</string>
    <string name="approve">Одобрить</string>
    <string name="reject">Отклонить</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="input_old_password">Введите старый пароль</string>
    <string name="input_new_password">Введите новый пароль</string>
    <string name="input_new_password_again">Повторите новый пароль </string>


</resources>