<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.LoginFragment">

    <EditText
        android:id="@+id/et_input_login"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:background="@drawable/default_border_white"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="10dp"
        android:scrollbars="horizontal"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        android:layout_marginTop="60dp"
        android:hint="@string/input_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />



    <EditText
        android:id="@+id/et_input_password"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:background="@drawable/default_border_white"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="10dp"
        android:scrollbars="horizontal"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        android:layout_marginTop="24dp"
        android:hint="@string/input_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_input_login"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_input_password" />

    <Button
        android:id="@+id/btn_go_to_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_log_in" />

    <TextView
        android:id="@+id/tv_text_code"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:text="@string/text_log_in_with_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_go_to_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_input_code"
        android:layout_marginTop="24dp"
        android:hint="@string/input_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_code"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:background="@drawable/default_border_white"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="10dp"
        android:scrollbars="horizontal"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_log_in_with_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/log_in_with_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_input_code" />

    <View
        android:elevation="3dp"
        android:id="@+id/dark_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        android:clickable="true"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>