<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.RedactionCarFragment">

    <EditText
        android:id="@+id/et_mark"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/default_border_white"
        android:hint="@string/add_mark"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="10dp"
        android:scrollbars="horizontal"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_model"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/default_border_white"
        android:hint="@string/add_model"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="10dp"
        android:scrollbars="horizontal"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mark"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_year"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/default_border_white"
        android:hint="@string/add_year"
        android:inputType="number"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="10dp"
        android:scrollbars="horizontal"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_model"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_mileage"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/default_border_white"
        android:inputType="number"
        android:hint="@string/add_mileage"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="10dp"
        android:scrollbars="horizontal"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_year"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_color"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/default_border_white"
        android:hint="@string/add_color"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="10dp"
        android:scrollbars="horizontal"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mileage"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_cost"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/default_border_white"
        android:inputType="number"
        android:hint="@string/add_price"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="10dp"
        android:scrollbars="horizontal"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_color"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_redaction_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginTop="32dp"
        android:text="@string/redaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cost" />

</androidx.constraintlayout.widget.ConstraintLayout>